fix : 밥일기 조회 컨버터 추가 #68